# HiveSockets

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  coding-standard.md  vcpkg.json
HiveSockets/: CMakeLists.txt
HiveSockets/src/: hvpch.h
HiveSockets/src/sockets/: SocketsInterface.cpp  SocketsInterface.h  SocketsTypes.cpp  SocketsTypes.h
Sandbox-Client/: CMakeLists.txt  main.cpp
Sandbox-Server/: CMakeLists.txt  main.cpp
Test/: CMakeLists.txt  MainTest.cpp
Test/HiveSockets/: HiveSocketsTest.cpp
